# ares

./: .dockerignore  .env.example  .gitignore  AUTH_SETUP.md  CLAUDE.md  DOCKER.md  Dockerfile.backend  Dockerfile.frontend  Dockerfile.frontend.dev  INSTALL_4090.md  LICENSE  Makefile  Modelfile  README-SERVICE.md  README.md  README_OLLAMA.md  README_REACT.md  SETUP.md  TEST_AUTH.md  apiinstructions.txt  docker-compose.dev.yml  docker-compose.yml  index.html  init_ares.py  manage-services.sh  manage.py  nginx.conf  nginx.conf.template  nginx.dev.conf  nginx.native.conf  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup-service-env.sh  setup_telegram_mapping.py  start-ares-services.sh  start-ares.sh  test_code_api.py  (+6 more)
api/: account_linking.py  account_linking_views.py  agent_views.py  auth.py  auth_redirect.py  auth_views.py  calendar_views.py  chat_views.py  code_views.py  debug_views.py  discord_bot.py  discord_views.py  memory_extraction_views.py  memory_views.py  model_selector.py  model_views.py  models.py  ollama_views.py  rag_views.py  session_views.py  settings_views.py  stt_views.py  system_views.py  telegram_views.py  training_views.py  tts_views.py  urls.py  user_account_linking.py  user_account_linking_views.py  user_manager_views.py  user_memory_views.py  utils.py  views.py
api/management/commands/: process_memories.py  process_scheduled_tasks.py  revise_memories.py  revise_memories_hourly.py  run_discord_bot.py
api/migrations/: 0001_initial.py  0002_add_aiselfmemory.py  0003_add_user_memory.py  0004_add_memory_extraction_models.py  0005_add_code_memory_models.py  0006_add_google_calendar_models.py  0007_rename_api_googleca_user_id_enabled_idx_api_googlec_user_id_d2276a_idx_and_more.py  0008_add_user_account_link.py  0009_add_discord_credential.py
ares_core/: __init__.py  agent_client.py  config.py  llm_router.py  orchestrator.py  prompt_assembler.py
ares_mind/: __init__.py  memory_extraction.py  memory_store.py  rag.py
ares_project/: asgi.py  settings.py  urls.py  wsgi.py
auth0-actions/: link-accounts-by-email.js
config/: Dockerfile.backend  nginx.conf
data/: .gitkeep
docs/: DISCORD.md  FUTURE_ABILITIES.md  MODEL_CONFIGURATION.md  SERVICE_MANAGEMENT.md  TODO.md
docs/archive/: DISCORD_BOT_DUPLICATE_MESSAGE_BUG.md  DISCORD_INTEGRATION_IMPROVEMENTS.md  REBUILD_INSTRUCTIONS.md
openrouter-service/: Dockerfile  package-lock.json  package.json
openrouter-service/src/: server.ts
scripts/: control_ollama.sh  dev.ps1  install_ollama_4090.sh  setup_gemma3.sh
scripts/service/: control-discord-bot.sh  restart-service.sh  restart_service.py  start-ares.sh  switch-frontend-mode.sh
scripts/setup/: install-discord-bot-service.sh  install-service-sudoers.sh  install-service.sh  rebuild_ares_heretic.sh  setup-service-env.sh  setup_gemma3.sh  setup_openai_20b.sh  sudoers-ares-services
scripts/utils/: check_telegram_sessions.py  fetch_openrouter_models.py  init_ares.py  link_telegram_user.py  verify-discord-intents.sh
src/: App.jsx  LoginButton.jsx  Profile.jsx  main.jsx
src/caption_ai/: __init__.py  __main__.py  bus.py  chatgpt_bridge.py  code_reader.py  config.py  main.py  notifier.py  power_pet_door.py  prompts.py  runner.py  storage.py  summarizer.py  telegram_bot.py  testing.py  web_summarizer.py
src/caption_ai/capture/: __init__.py
src/caption_ai/llm/: base.py  gemini_api.py  gemma_api.py  grok_api.py  local_ollama.py  (+2 more)
src/components/: TabPanel.jsx  Tabs.jsx
src/frontend/: App.jsx
src/hooks/: useAgentStatus.js  useTabVisibility.js
src/services/: api.js  auth.js  useWebSocket.js
src/stores/: settingsStore.js  uiStore.js
src/styles/: App.css  ConversationList.css  ConversationViewer.css  TabPanel.css  Tabs.css  index.css  uno.css
tests/: __init__.py  test_discord_bot.py
(+83 files in other folders)
