[project]
name = "ares"
version = "0.1.0"
description = "Ares AI - Django-based AI Assistant"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Gabriel Parra", email = "gabeparra@example.com"}
]
dependencies = [
    # Django and Django REST Framework
    "django>=5.0.0",
    "djangorestframework>=3.14.0",
    "django-cors-headers>=4.3.0",
    # Auth0/OAuth
    "PyJWT>=2.8.0",
    "cryptography>=41.0.0",
    "requests>=2.31.0",
    # Security - Field Encryption
    "django-encrypted-model-fields>=0.6.5",
    # Database
    "psycopg2-binary>=2.9.9",
    # LLM Integration
    "httpx>=0.25.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    # Telegram Bot
    "python-telegram-bot>=20.0",
    # RAG (Retrieval-Augmented Generation)
    "chromadb>=0.4.22",
    # Google Calendar Integration
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.1.1",
    "google-api-python-client>=2.100.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "ares_core", "ares_mind", "ares_project"]

[tool.ruff]
line-length = 100
target-version = "py313"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

